Name:                scheme
Version:             0.1
Build-type:          Simple
Cabal-version:       >=1.2
Extra-source-files:  README.md

Executable scheme
  Main-is:           Main.hs

Library
  Build-depends:     base,
                     ghc,
                     mtl,
                     parsec,
                     semigroups,
                     split
  Exposed-modules:   Scheme
--  ghc-options:       -Wall
